updated sale and countdown banner, updated mobile header, introduced compass gem, added new svg icons

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,5 +1,6 @@
 //= require_tree ./libs/vex
 //= require_tree ./redesign/stylesheets
+@import "compass";
 
 @import 'redesign/vars';
 @import 'redesign/mixins';
