--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -6,6 +6,7 @@ $pink-bg: #eeddf0;
 // Brand Colors
 $c-brand-blue: #003647;
 $c-brand-red: #e31313;
+$c-brand-pink: #eeddf0;
 
 // Neutral Colors
 $c-neutral-white: #fff;
