--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -44,15 +44,17 @@
     / = raw enable_countdown_banner_sale
 
 #countdown-banner.alert-sale.hidden role="alert"
+  .outer-wrap
+    .inner-wrap
+      span.medium.banner-title
+      span.spacer
+      '
+      span.banner-message
+      span.timer-box
+        span
+          span.hh 48
+        span
+          span.mm 00
+        span
+          span.ss 00
   a.close href="#"
-  span.medium.banner-title
-  span.spacer
-  '
-  span.banner-message
-  span.timer-box
-    span
-      span.hh 48
-    span
-      span.mm 00
-    span
-      span.ss 00
