--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -1,16 +1,29 @@
-.sitewide
-  - if sale_active?
-    #sale-banner.alert-sale role="alert"
-      span.medium.banner-title
-        .center-block
-          = current_sale.sitewide_message
-          '          
-          = link_to 'Shop now!', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99), class: 'text-highlight',  style: 'color:white;text-decoration:underline'
+- if sale_active?
+  #sale-banner.alert-sale role="alert"
+    .outer-wrap
+      .inner-wrap.icon
+        .svg-fit
+        .copy Fit guarantee
+      .inner-wrap.icon
+        .svg-waste
+        .copy Anti-wastage
+      .inner-wrap
+        .title-wrap
+          .title
+            = current_sale.sitewide_message
+            '          
+            = link_to 'Shop now!', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
+      .inner-wrap.icon
+        .svg-custom
+        .copy Custom styles
+      .inner-wrap.icon
+        .svg-colour
+        .copy Custom colours
 
-  / TODO - Refactor how we apply email reminders
-  - if Features.active?(:send_promotion_email_reminder)
-    - if automatic_discount_code.present? && session[:email_reminder_promo] != 'scheduled_for_delivery'
-      .auto-discount-applied
-        .text-center
-          p WANT TO SHOP LATER?
-          = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
+/ TODO - Refactor how we apply email reminders
+- if Features.active?(:send_promotion_email_reminder)
+  - if automatic_discount_code.present? && session[:email_reminder_promo] != 'scheduled_for_delivery'
+    .auto-discount-applied
+      .text-center
+        p WANT TO SHOP LATER?
+        = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
