Rename dresses shop

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -118,7 +118,7 @@ ruby:
         div#dresses-menu
           ul.nav.navbar-nav
             li.normal-item
-              .text.text-back DRESSES
+              .text.text-back SHOP
               .arrow
                 i.fa.fa-chevron-left
                 .back BACK
@@ -190,7 +190,7 @@ ruby:
             li.normal-item.no-border
               = link_to 'Cocktail', build_taxon_path('Cocktail'), class: 'text'
 
-        /!        
+        /!
           div#events-menu
             ul.nav.navbar-nav
               li.normal-item
