--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -52,7 +52,7 @@ ruby:
   span.new-this-week
     em New this week
   span.dresses
-    = link_to 'DRESSES', dresses_path
+    = link_to 'SHOP', dresses_path
   /!
     span.nested
       ' SHOP BY EVENT
