created more dresses partial, added more dresses to lookbook pages

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -78,6 +78,7 @@
 @import 'redesign/components/how-it-works';
 @import 'redesign/components/styling-tips';
 @import 'redesign/components/banners';
+@import 'redesign/components/panels/more-dresses';
 
 // Pages
 @import 'redesign/pages/landing-dhd';
