--- a/app/views/lookbook/dance_hall_days.html.slim
+++ b/app/views/lookbook/dance_hall_days.html.slim
@@ -137,22 +137,5 @@
     .row
         = render partial: 'pick_products_without_content', locals: {rangeFrom: 12, customWrapper: 'col-md-3 col-xs-6'}
 
-    .row.footer-wrap
-      .outer-wrap
-        .col-md-6.col-xs-12
-          = link_to dresses_path, class: 'media-wrap'
-            = image_tag 'landingpages/dance-hall-days/tile-footer.jpg', alt: 'Discover more dresses'
-        .col-md-6.col-xs-12
-          .inner-wrap
-            ul 
-              li.title Shop by style
-              li = link_to 'Two-Piece'   , build_taxon_path('Two Piece')
-              li = link_to 'One Shoulder', build_taxon_path('One-Shoulder')
-              li = link_to 'Strapless'   , build_taxon_path('Strapless')
-              li = link_to 'Backless'    , build_taxon_path('Backless')
-            ul
-              li.title Shop by colour
-              li = link_to 'Black'        , colour_path('Black')
-              li = link_to 'White'        , colour_path('White')
-              li = link_to 'Red'          , colour_path('Red')
-              li = link_to 'Pastel'       , colour_path('Pastel')
+    .row
+      = render partial: 'shared/redesign/more_dresses'
