Update paypal button and text for amex

--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -205,6 +205,11 @@ $order-summary-bg: #f7f7f9;
           input {
             background-color: #ffffff;
           }
+          .paypal-amex {
+            font-size:0.8em;
+            font-weight:normal;
+            margin-top:5px;
+          }
         }
       }
     }
