--- a/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
@@ -39,7 +39,7 @@ p All transactions are secure and encrypted. Credit card information is never st
       .panel-collapse.in
         .panel-body
           = paypal_express_button
-
+          p.paypal-amex Use AMEX? Checkout through PayPal.
 p
     ' By making this purchase you are agreeing to the Fame & Partners
     a href="/terms.html" Term & Conditions.
