fixed iPhone/iPad styling issues

--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -1,7 +1,7 @@
 title = get_title
 meta name="description" content=(get_meta_description)
 meta charset="utf-8"
-meta name="viewport" content="width=device-width"
+meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
 
 script type="text/javascript" src="/assets/modernizr-custom.js"
 
