--- a/app/assets/stylesheets/redesign/components/_styling-tips.scss
+++ b/app/assets/stylesheets/redesign/components/_styling-tips.scss
@@ -57,6 +57,7 @@
   .media-wrap {
 
     .cta-square {
+      display: none;
       top: 50%;
       right: 5%;
       margin-top: -65px;
@@ -86,7 +87,7 @@
 
   }
 
-  @include mobile {
+  @media (max-width: $bootstrap-sm-width) {
 
     & {
 
@@ -105,8 +106,16 @@
         visibility: visible;
       }
 
-      ol {
-        margin-bottom: 30px;
+      .cta-square {
+        display: none;
+      }
+
+      .media-wrap .cta-square {
+        display: table;
+      }
+
+      [class^="col-"] ol {
+        padding: 0 0 30px 0;
 
         li:before {
           display: inline-block;
@@ -114,11 +123,6 @@
           vertical-align: bottom;
         }
 
-      }
-
-      .col-md-6 ol,
-      .col-md-9 ol {
-        padding: 0;
       }
 
     }
