--- a/app/assets/stylesheets/redesign/pages/_landing-dhd.scss
+++ b/app/assets/stylesheets/redesign/pages/_landing-dhd.scss
@@ -131,12 +131,18 @@
 
   }
 
-  @include mobile {
+  @media (max-width: $bootstrap-sm-width) {
 
     & {
 
       .how-it-works {
         margin-bottom: 30px;
+
+        .testimonial {
+          padding-left: 0;
+          padding-right: 0;
+        }
+
       }
 
     }
