--- a/app/views/lookbook/dance_hall_days.html.slim
+++ b/app/views/lookbook/dance_hall_days.html.slim
@@ -7,7 +7,7 @@
 
   .hero-wrap.media-wrap
     img src='#{image_path("landingpages/dance-hall-days/hero-full.jpg")}' srcset='
-      #{image_path("landingpages/dance-hall-days/hero-sml.jpg")} 768w, 
+      #{image_path("landingpages/dance-hall-days/hero-sml.jpg")} 768w 2x, 
       #{image_path("landingpages/dance-hall-days/hero-med.jpg")} 1024w, 
       #{image_path("landingpages/dance-hall-days/hero-full.jpg")} 1200w' alt='The exclusive Miss. Ellen - #SARAH3LLEN4FAME'
 
@@ -75,7 +75,7 @@
       .col-md-9.position-1
         = link_to dresses_path + '/dress-allegra-680?color=forest-green', class: 'media-wrap tile-lrg'
           img src='#{image_path("landingpages/dance-hall-days/tile-shop-this-lrg.jpg")}' srcset='
-                  #{image_path("landingpages/dance-hall-days/tile-shop-this-lrg-mob.jpg")} 768w,
+                  #{image_path("landingpages/dance-hall-days/tile-shop-this-lrg-mob.jpg")} 768w 2x,
                   #{image_path("landingpages/dance-hall-days/tile-shop-this-lrg.jpg")} 1024w'
           .cta-square.skin-light
             span Shop <br> this look
@@ -88,51 +88,48 @@
           .col-md-3.position-2
             = link_to dresses_path + '/dress-allegra-680?color=forest-green', class: 'media-wrap'
               img src='#{image_path("landingpages/dance-hall-days/tile-look-1.jpg")}' srcset='
-                  #{image_path("landingpages/dance-hall-days/tile-look-1-mob.jpg")} 768w,
+                  #{image_path("landingpages/dance-hall-days/tile-look-1-mob.jpg")} 768w 2x,
                   #{image_path("landingpages/dance-hall-days/tile-look-1.jpg")} 1024w'
-              .visible-xs
-                .cta-square.skin-light
-                  span Shop <br> this look
+              .cta-square.skin-light
+                span Shop <br> this look
           .col-md-9.position-1
             .sub-title Look one
             ol
               li Keep grooming to a minimum: Natural make-up, beachy waves or a long, wavy ponytail. With so much skin on show, you won't need to up the sex-factor any other way.
               li Add the season's must-have shoe, the lace-up heel – it's a powerful look that compliments the thigh-high split.
               li Choose delicate jewellery to let your dress do the talking. A body chain or long line necklace or a subtle, drop chain earring add a touch of sparkle.
-            = link_to dresses_path + '/dress-allegra-680?color=forest-green', class: 'cta-square hidden-xs'
+            = link_to dresses_path + '/dress-allegra-680?color=forest-green', class: 'cta-square'
               span Get <br> the look
       .row
         .mobile-change-order
           .col-md-6.position-2
             = link_to dresses_path + '/dress-mystic-velvet-728?color=navy', class: 'media-wrap'
               = image_tag 'landingpages/dance-hall-days/tile-look-2.jpg'
-              .visible-xs
-                .cta-square.skin-light.left
-                  span Shop <br> this look
+              .cta-square.skin-light.left
+                span Shop <br> this look
           .col-md-6.position-1
             .sub-title Look two
             ol
               li Slicked-back hair ensures the focus stays on your shoulders and décolletage. Try a straight-from-the-catwalk, wet-look, down do or a sleek ponytail for maximum impact.
               li A statement cuff and doorknocker earrings compliment this dress perfectly. 10 points for matching crystal sandals.
-            = link_to dresses_path + '/dress-mystic-velvet-728?color=navy', class: 'cta-square hidden-xs'
+            = link_to dresses_path + '/dress-mystic-velvet-728?color=navy', class: 'cta-square'
               span Get <br> the look
       .row
         .mobile-change-order
           .col-md-3.position-2
             = link_to dresses_path + '/dress-larissa-689?color=apple-green', class: 'media-wrap'
               img src='#{image_path("landingpages/dance-hall-days/tile-look-3.jpg")}' srcset='
-                  #{image_path("landingpages/dance-hall-days/tile-look-3-mob.jpg")} 768w,
+                  #{image_path("landingpages/dance-hall-days/tile-look-3-mob.jpg")} 768w 2x,
                   #{image_path("landingpages/dance-hall-days/tile-look-3.jpg")} 1024w'
-              .visible-xs
-                .cta-square
-                  span Shop <br> this look
+              .cta-square
+                span Shop <br> this look
           .col-md-9.position-1
             .sub-title Look three
             ol
               li Tap into the seasons 70s trend with long, layered necklaces and cocktail rings.
               li Straight, middle-parted hair speaks to hippie bohemia, as does false lashes and winged eyeliner.
               li Add a metallic belt for gypsy luxe effect.
-            = link_to dresses_path + '/dress-larissa-689?color=apple-green', class: 'cta-square hidden-xs'
+            = link_to dresses_path + '/dress-larissa-689?color=apple-green', class: 'cta-square'
               span Get <br> the look
     .row
         = render partial: 'pick_products_without_content', locals: {rangeFrom: 12, customWrapper: 'col-md-3 col-xs-6'}
