--- a/app/assets/stylesheets/redesign/components/_styling-tips.scss
+++ b/app/assets/stylesheets/redesign/components/_styling-tips.scss
@@ -98,6 +98,7 @@
       .title {
         margin-bottom: 30px;
         border-bottom: solid $c-neutral-black 1px;
+        font-size: 2.2em;
       }
 
       .sub-title {
